# commander

./: .env.development  .env.production  .gitignore  Cargo.toml  README.md  build.rs  commander.desktop  commander.sln  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  ui.cmb  ui.ui  vite.config.ts  webpack.common.js
.ionide/: symbolCache.db
Commander/: Android.fs  AndroidProxy.fs  BackgroundJobs.cs  Cancellation.cs  Commander.csproj  Commander.fsproj  CommanderCore.fs  Commands.cs  Configuration.fs  ConfigurationLinux.fs  ConfigurationWindows.fs  CopyProcessor.cs  Directory.Raw.cs  Directory.cs  Directory.fs  DirectoryWatcher.cs  DirectoryWatcher.fs  Electron.fs  Engine.fs  Engines.fs  Error.cs  Events.cs  Exception.cs  Exceptions.cs  ExifReader.cs  ExtendedInfos.cs  ExtendedRename.fs  FileSystem.fs  FolderEvents.fs  Globals.cs  Gtk.fs  HttpRequests.fs  HttpServer.cs  IO.fs  Images.fs  LinuxDirectory.fs  LinuxModel  LinuxModel.fs  LinuxRequests.fs  LinuxRoot.fs  (+41 more)
Commander/ClrWinAp/: Native.cs
Commander/CsTools/: Directory.cs  Exceptions.cs  Process.cs  StringExtensions.cs  TaskExceptions.cs
Commander/LinqTools/: Extensions.cs  Nothing.cs  ResultExtensions.cs
Commander/Linux/: HeaderBar.cs  Root.cs
Commander/Resources/: headerbar.ui  progresscontrol.ui  template.ui  window.ui
Commander/WebViewDotNet/: HttpBuilder.cs  WebView.cs  WebViewBuilder.cs
Core/: Android.fs  Configuration.fs  Core.fsproj  Engine.fs  FileSystem.fs  HttpRequests.fs  Model.fs  Remotes.fs
Linux/: Directory.fs  Elevated.fs  Linux.fsproj  Requests.fs  Root.fs  Titlebar.fs  Types.fs
LinuxPlugin/: Configuration.fs  Directory.fs  Gtk.fs  LinuxPlugin.fsproj  Plugin.fs  Requests.fs  Root.fs  Theme.fs
Model/: Directory.fs  Events.fs  Model.fsproj  RequestResult.fs  Start.fs  Types.fs
Native/: icon.cpp
Tracks/: TrackInfo.cs
Windows/: Directory.fs  Elevated.fs  Library.fs  Requests.fs  Root.fs  Windows.fsproj
WindowsPlugin/: Configuration.fs  Directory.fs  Plugin.fs  Requests.fs  Theme.fs  WindowsPlugin.fsproj
electron/: android.js  commands.js  main.js
electron/platform/: linux.js  windows.js
electron/typescript/: main.ts  tsconfig.json
local-modules/rust-addon/: index.d.ts  package.json
local-modules/shared-module/: package.json  utils.js
native/: binding.gyp  package-lock.json  package.json
public/: index.html  track.gpx
resources/: index.html  progress_display.ui  resources.gresource.xml  window.ui
rust/: Cargo.toml  package-lock.json  package.json
rust-addon/: package.json
rust-test/: index.js  indexLinux.js  indexWindows.js
rust/src/: error.rs  exif.rs  get_files.rs  lib.rs
rust/testrs/: Cargo.toml  package-lock.json  package.json
rust/testrs/source/: index.js
rust/testrs/src/: lib.rs
scripts/: commander.js  commander.ts  copy.ts  extendedrename.ts  folder.js  functional.ts  index.js  menu.js  menu.ts  remotes.ts  requests.ts  tsconfig.json  utils.ts  viewer.js  viewer.ts  windowext.d.ts
scripts copy/: commander.js  menu.js
shared/: utils.js
shared-module/: utils.js
src/: App.css  App.tsx  Commander.tsx  cancellations.rs  commander.rs  dir_watcher.rs  directory.rs  enums.ts  error.rs  extended_items.rs  folder.rs  globals.ts  history.ts  index.css  items.ts  lib.rs  main.rs  progresses.rs  progressstream.rs  remote.rs  request_error.rs  requests.rs  requests_http.rs  str.rs  tableroitems.extension.ts  tracks.rs  webrequest.rs  webview.ts
web/: index copy.html  index.html
website/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
(+374 files in other folders)
