[package]
name = "commander"
version = "0.1.0"
edition = "2021"

[dependencies]
webview_app = "1.0.0-beta.29"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
include_dir = "0.7.4"
dirs = "5.0"
chrono = { version = "0.4.38", features = ["serde"] }
kamadak-exif = "0.5.5"

[target.'cfg(target_os="linux")'.dependencies]
gtk = { version = "0.9.1", package = "gtk4", features = ["v4_14"]}
webkit6 = "0.4.0"

[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.58", features = [ "Win32_Storage_FileSystem"]}
systemicons = "0.9.7"

[target.'cfg(target_os="linux")'.build-dependencies]
glib-build-tools = "0.20.0"
