[package]
name = "commander"
version = "0.1.0"
edition = "2021"

[dependencies]
webview_app = "1.0.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_repr = "0.1"
include_dir = "0.7.4"
dirs = "5.0"
chrono = { version = "0.4.38", features = ["serde"] }
kamadak-exif = "0.6.1"
urlencoding = "2.1.3"
quick-xml = { version = "0.37.1", features = ["serialize"] }
trash = "5.2.0"
rm_rf = "0.6.2"

[target.'cfg(target_os="linux")'.dependencies]
gtk = { version = "0.9.4", package = "gtk4", features = ["v4_14"]}
webkit6 = "0.4.0"
async-channel = "2.3.1"

[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.58", features = [ "Win32_Storage_FileSystem", "Win32_System_Registry"]}
systemicons = "0.9.13"
windows-result = "0.2.0"

[target.'cfg(target_os="linux")'.build-dependencies]
glib-build-tools = "0.20.0"

[target.'cfg(target_os="windows")'.build-dependencies]
static_vcruntime = "2.0.0"
winresource = "0.1.19"
