[package]
name = "commander"
version = "1.0.0"
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"

[build-dependencies]
napi-build = "2.0.0"

[profile.release]
lto = true
strip = "symbols"

[profile.dev]
debug = true