[package]
name = "commander"
version = "1.0.0"
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.42"
itertools = "0.14.0"
kamadak-exif = "0.6.1"
lexicmp = "0.2.0"
napi = "3.0.0"
napi-derive = "3.0.0"

[build-dependencies]
napi-build = "2.0.0"

[profile.release]
lto = true
strip = "symbols"

[profile.dev]
debug = true
